apps/gateway/manifests/http-redirect.yaml
# apps/gateway/manifests/http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: istio-system
spec:
  parentRefs:
    - name: main
      namespace: istio-system
      sectionName: http
  hostnames:
    - "*.oci.sebastiangreen.se"
  rules:
    - matches:
        - path:
            type: RegularExpression
            value: "^(?!.*\\.well-known/acme-challenge).*$" # Not containing acme-challenge
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
